--- a/ServerEngine/packages.config
+++ b/ServerEngine/packages.config
@@ -3,6 +3,10 @@
   <package id="AMQPNetLite" version="2.1.7" targetFramework="net461" />
   <package id="Konscious.Security.Cryptography.Argon2" version="1.2.1" targetFramework="net461" />
   <package id="Konscious.Security.Cryptography.Blake2" version="1.0.9" targetFramework="net461" />
+  <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net461" />
+  <package id="Microsoft.Data.Edm" version="5.8.2" targetFramework="net461" />
+  <package id="Microsoft.Data.OData" version="5.8.2" targetFramework="net461" />
+  <package id="Microsoft.Data.Services.Client" version="5.8.2" targetFramework="net461" />
   <package id="Microsoft.DotNet.PlatformAbstractions" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Configuration" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.2.0" targetFramework="net461" />
@@ -24,21 +28,26 @@
   <package id="Microsoft.Orleans.OrleansCodeGenerator.Build" version="2.3.4" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Orleans.OrleansProviders" version="2.3.4" targetFramework="net461" />
   <package id="Microsoft.Orleans.OrleansRuntime" version="2.3.4" targetFramework="net461" />
+  <package id="Microsoft.Orleans.Persistence.AzureStorage" version="2.3.4" targetFramework="net461" />
   <package id="Microsoft.Orleans.Runtime.Abstractions" version="2.3.4" targetFramework="net461" />
   <package id="Microsoft.Orleans.Server" version="2.3.4" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net461" />
   <package id="System.Collections.Immutable" version="1.4.0" targetFramework="net461" />
   <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net461" />
+  <package id="System.ComponentModel.EventBasedAsync" version="4.0.11" targetFramework="net461" />
   <package id="System.ComponentModel.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.ComponentModel.TypeConverter" version="4.3.0" targetFramework="net461" />
   <package id="System.Diagnostics.FileVersionInfo" version="4.3.0" targetFramework="net461" />
   <package id="System.Diagnostics.Process" version="4.3.0" targetFramework="net461" />
   <package id="System.Diagnostics.TraceSource" version="4.3.0" targetFramework="net461" />
+  <package id="System.Dynamic.Runtime" version="4.0.0" targetFramework="net461" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net461" />
+  <package id="System.Linq.Queryable" version="4.0.0" targetFramework="net461" />
   <package id="System.Memory" version="4.5.1" targetFramework="net461" />
   <package id="System.Net.NameResolution" version="4.3.0" targetFramework="net461" />
   <package id="System.Net.NetworkInformation" version="4.3.0" targetFramework="net461" />
+  <package id="System.Net.Requests" version="4.3.0" targetFramework="net461" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
   <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net461" />
   <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net461" />
@@ -50,10 +59,12 @@
   <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.Spatial" version="5.8.2" targetFramework="net461" />
   <package id="System.Threading.Thread" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.ThreadPool" version="4.3.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="net461" />
   <package id="System.Xml.XPath" version="4.3.0" targetFramework="net461" />
   <package id="System.Xml.XPath.XmlDocument" version="4.3.0" targetFramework="net461" />
+  <package id="WindowsAzure.Storage" version="8.2.1" targetFramework="net461" />
 </packages>
