Move account management away from the game universe grain to enable easier deletion of the game universe without deleting the account grains.
No longer keep a registry of accounts, but rather rely on a deterministic grain key as we have no need to loop through all accounts for anything.

Remove currently unused item grain classes.

--- a/ServerEngine/ServerEngine.csproj
+++ b/ServerEngine/ServerEngine.csproj
@@ -276,15 +276,16 @@
     <Compile Include="Commands\GameCommands\StatsCommand.cs" />
     <Compile Include="EqualChecker.cs" />
     <Compile Include="GrainInterfaces\IAccountGrain.cs" />
+    <Compile Include="GrainInterfaces\IAccountsGrain.cs" />
     <Compile Include="GrainInterfaces\IGameUniverseGrain.cs" />
-    <Compile Include="GrainInterfaces\IItemGrain.cs" />
     <Compile Include="GrainSiloAndClient\GrainClusterClient.cs" />
     <Compile Include="GrainSiloAndClient\GrainSiloHost.cs" />
     <Compile Include="Grains\AccountGrain.cs" />
-    <Compile Include="Grains\AccountState.cs" />
+    <Compile Include="Grains\AccountsGrain.cs" />
+    <Compile Include="GrainStates\AccountsState.cs" />
+    <Compile Include="GrainStates\AccountState.cs" />
     <Compile Include="Grains\GameUniverseGrain.cs" />
-    <Compile Include="Grains\GameUniverseState.cs" />
-    <Compile Include="Grains\ItemGrain.cs" />
+    <Compile Include="GrainStates\GameUniverseState.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="ItemUseableFrom.cs" />
     <Compile Include="ItemRecipe.cs" />
